# othello

./: .gitignore  README.md  othello.ipynb  pyproject.toml
othello/: __init__.py  board.py  game.py  nn.py  players.py  rules.py  td.py
tests/: test_board.py  test_players.py  test_rules.py  test_td_conv.py  test_td_math.py
